--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
 
     <dimen name="text_small">12sp</dimen>
     <dimen name="text_basic">14sp</dimen>
+    <dimen name="text_large">48sp</dimen>
+
+    <dimen name="size_icon_weather">96dp</dimen>
 </resources>
