--- a/app/src/main/res/layout/now_weather_fragment.xml
+++ b/app/src/main/res/layout/now_weather_fragment.xml
@@ -17,14 +17,14 @@
             style="@style/TextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Санкт-Петербург" />
+            tools:text="Санкт-Петербург" />
 
         <TextView
             android:id="@+id/country"
             style="@style/TextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Россия" />
+            tools:text="Россия" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,7 +38,7 @@
             style="@style/TextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="16 февраля 2025" />
+            tools:text="16 февраля 2025" />
     </LinearLayout>
 
     <LinearLayout
@@ -131,7 +131,7 @@
                             style="@style/TextLargeStyle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="-25 \u2103" />
+                            tools:text="-25 \u2103" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -152,7 +152,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="2"
-                                android:text="-20 \u2103" />
+                                tools:text="-20 \u2103" />
                         </LinearLayout>
 
                         <TextView
@@ -221,7 +221,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="2"
-                            android:text="10 м/с" />
+                            tools:text="10 м/с" />
 
                         <TextView
                             android:id="@+id/wind_gust"
@@ -230,7 +230,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/padding_small"
                             android:layout_weight="2"
-                            android:text="15 м/с" />
+                            tools:text="15 м/с" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -251,7 +251,7 @@
                             style="@style/TextStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Ю/З" />
+                            tools:text="Ю/З" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -286,7 +286,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="40 %" />
+                        tools:text="40 %" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -310,7 +310,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="40 %" />
+                        tools:text="40 %" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -333,7 +333,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="756 мм.рт.ст" />
+                        tools:text="756 мм.рт.ст" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -356,7 +356,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="50 %" />
+                        tools:text="50 %" />
                 </LinearLayout>
 
 
@@ -380,7 +380,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="200 м" />
+                        tools:text="200 м" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
