--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.o2rus" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.Weather" parent="Theme.MaterialComponents.DayNight">
 
 <!--        &lt;!&ndash; Primary brand color. &ndash;&gt;-->
         <item name="colorPrimary">@color/white</item>
